--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>jonathanbatten's Git Achievements</h2>
-Unlocked 13/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 225 points<br>
+Unlocked 14/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 226 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -61,28 +61,30 @@ Unlocked 13/48 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Stone Mason (Level 6)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
+<li><div class="title">Weaver</div>  <div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a></div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   3120 symbolic-ref
-   2590 status
-    449 checkout
-    296 add
-    240 rebase
-    160 push
-    156 pull
-    122 commit
-     95 merge
-     64 stash
+   3287 symbolic-ref
+   2763 status
+    457 checkout
+    298 add
+    242 rebase
+    162 push
+    158 pull
+    123 commit
+     96 merge
+     69 stash
+     66 branch
      25 config
      21 achievements
-     13 branch
       5 rm
       3 clone
       2 reset
       2 remote
       2 fetch
       1 show
+      1 reflog
       1 --help
       1 gui
       1 cherry-pick
@@ -130,7 +132,6 @@ There are 48 Achievements. Some achievements can be leveled up depending on the 
 <li><div class="title">Thug</div><div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
 <li><div class="title">Traveler</div><div class="info">Streamed changes between another rcs with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-svn.html">git-svn</a> or <a href="http://www.kernel.org/pub/software/scm/git/docs/git-p4.html">git-p4</a>.</div></li>
 <li><div class="title">Tree Trimmer</div><div class="info">Rewrite branches with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-filter-branch.html">git-filter-branch</a></div></li>
-<li><div class="title">Weaver</div><div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a></div></li>
 <li><div class="title">Web Designer</div><div class="info">Instantly browse your working repository in gitweb with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-instaweb.html">git-instaweb</a></div></li>
 </ul></div>
 </body></html>
